# arm-float-detector

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
arm_float_detector/: arm_float_detector.py
tests/: basic_double.c  basic_neither.c  basic_single.c  test_arm_double_detector.py
